pyinterp/pyinterp/pyinterp/tests/must_pass/errors/missing_arg5.py
def f():
    pass
f(1, 2)

